crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__match__as_pattern_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/match/as_pattern_0.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            15,
        ),
        range: 0..198,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        14,
                    ),
                    range: 0..197,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(
                                1,
                            ),
                            range: 6..13,
                            id: Name("subject"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 127..197,
                            node_index: NodeIndex(
                                13,
                            ),
                            pattern: MatchClass(
                                PatternMatchClass {
                                    range: 132..146,
                                    node_index: NodeIndex(
                                        11,
                                    ),
                                    cls: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                5,
                                            ),
                                            range: 133..139,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                    arguments: PatternArguments {
                                        range: 140..146,
                                        node_index: NodeIndex(
                                            10,
                                        ),
                                        patterns: [
                                            MatchAs(
                                                PatternMatchAs {
                                                    range: 141..142,
                                                    node_index: NodeIndex(
                                                        7,
                                                    ),
                                                    pattern: None,
                                                    name: Some(
                                                        Identifier {
                                                            id: Name("a"),
                                                            range: 141..142,
                                                            node_index: NodeIndex(
                                                                6,
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                            MatchAs(
                                                PatternMatchAs {
                                                    range: 144..145,
                                                    node_index: NodeIndex(
                                                        9,
                                                    ),
                                                    pattern: None,
                                                    name: Some(
                                                        Identifier {
                                                            id: Name("b"),
                                                            range: 144..145,
                                                            node_index: NodeIndex(
                                                                8,
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                        keywords: [],
                                    },
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: NodeIndex(
                                            12,
                                        ),
                                        range: 193..197,
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
3 |     #            class pattern
4 |     #            v
5 |     case (x as y)(a, b):
  |           ^^^^^^ Syntax Error: Invalid value for a class pattern
6 |     #     ^^^^^^
7 |     #    as-pattern
  |
